--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,23 @@ vignettes/*.pdf
 *.utf8.md
 *.knit.md
 
-# R Environment Variables
-.Renviron
+# intermediate files
+*_cache/
+*_files/
+Prelim_*
+scripts/__*
+
+# manuscripts
+manuscript/
+
+# large files
+figures/*tiff
+figures/*png
+
+# redundant data
+*.rds
+input_data/*.qzv
+input_data/*metadata.txt
+output_data/test*
+
+
