--- a/.gitignore
+++ b/.gitignore
@@ -50,32 +50,32 @@ figures/*tiff
 figures/*png
 
 # redundant figures
-figures/formatted_figures/
-figures/Stability_core*
-figures/*rare13092.pdf
-figures/*rare23345.pdf
-figures/*_curves.pdf
-figures/*_timepath.pdf
-figures/*_grey.pdf
-figures/*_backwash.pdf
-figures/*_granules_fam.pdf
-figures/*topN15_granules.pdf
-figures/*topN25_granules.pdf
+/figures/formatted_figures/
+/figures/Stability_core*
+/figures/*rare13092.pdf
+/figures/*rare23345.pdf
+/figures/*_curves.pdf
+/figures/*_timepath.pdf
+/figures/*_grey.pdf
+/figures/*_backwash.pdf
+/figures/*_granules_fam.pdf
+/figures/*topN15_granules.pdf
+/figures/*topN25_granules.pdf
 
 # redundant data
-raw_data/
-*_removal.Rmd
-*.rds
-input_data/RDS_files/
-input_data/*.qzv
-input_data/*metadata.txt
-input_data/*metadata_formatted.txt
-input_data/*.xlsx
-output_data/test*
-output_data/*.rds
-output_data/Table*
-output_data/*.fasta
-output_data/*.xlsx
-output_data/*.jpg
-output_data/*euk.csv
+/raw_data/
+/*_removal.Rmd
+/*.rds
+/input_data/RDS_files/
+/input_data/*.qzv
+/input_data/*metadata.txt
+/input_data/*metadata_formatted.txt
+/input_data/*.xlsx
+/output_data/test*
+/output_data/*.rds
+/output_data/Table*
+/output_data/*.fasta
+/output_data/*.xlsx
+/output_data/*.jpg
+/output_data/*euk.csv
 
